got server roughly working & adding types
