# types.go
@@ -1,0 +1,40 @@
+package main
+
+import (
+	"math/rand"
+	"strconv"
+
+	"github.com/google/uuid"
+)
+
+
+type Service struct {
+	ServiceName string
+	ServiceDescription string
+  	ServiceVersions []string
+  	ServiceId string
+}
+
+func makeRandomVersionsSlice(max int) []string {
+	num_versions := rand.Intn(max)
+	if num_versions == 0 {
+		num_versions = 1
+	}
+
+	versions_array := make([]string, num_versions)
+	for idx := range versions_array {
+		versions_array[idx] = "v" + strconv.Itoa(1+idx)
+	}
+
+	return versions_array
+}
+
+func NewService(ServiceName, ServiceDescription, ServiceVersions string) *Service {
+	return &Service{
+		ServiceName: ServiceName,
+		ServiceDescription: ServiceDescription,
+		ServiceVersions: makeRandomVersionsSlice(5),
+		ServiceId: uuid.New(),
+
+	}
+}
